Fix missing color

--- a/style.css
+++ b/style.css
@@ -56,46 +56,46 @@ li {
   display: inline;
 }
 
-li:nth-child(8n) {
+li:nth-child(7n) {
   color: var(--purple);
 }
-li:nth-child(8n + 2) {
+li:nth-child(7n + 2) {
   color: var(--blue);
 }
-li:nth-child(8n + 4) {
+li:nth-child(7n + 4) {
   color: var(--cyan);
 }
-li:nth-child(8n + 6) {
+li:nth-child(7n + 6) {
   color: var(--green);
 }
-li:nth-child(8n + 1) {
+li:nth-child(7n + 1) {
   color: var(--orange);
 }
-li:nth-child(8n + 3) {
+li:nth-child(7n + 3) {
   color: var(--red);
 }
-li:nth-child(8n + 5) {
+li:nth-child(7n + 5) {
   color: var(--brown);
 }
-li:nth-child(8n) > a:hover {
+li:nth-child(7n) > a:hover {
   background: var(--purpleLight);
 }
-li:nth-child(8n + 2) > a:hover {
+li:nth-child(7n + 2) > a:hover {
   background: var(--blueLight);
 }
-li:nth-child(8n + 4) > a:hover {
+li:nth-child(7n + 4) > a:hover {
   background: var(--cyanLight);
 }
-li:nth-child(8n + 6) > a:hover {
+li:nth-child(7n + 6) > a:hover {
   background: var(--greenLight);
 }
-li:nth-child(8n + 1) > a:hover {
+li:nth-child(7n + 1) > a:hover {
   background: var(--orangeLight);
 }
-li:nth-child(8n + 3) > a:hover {
+li:nth-child(7n + 3) > a:hover {
   background: var(--redLight);
 }
-li:nth-child(8n + 5) > a:hover {
+li:nth-child(7n + 5) > a:hover {
   background: var(--brownLight);
 }
 
